use com.sun.mail

--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,8 @@
       </dependency>
 
       <dependency>
-        <groupId>javax.mail</groupId>
-        <artifactId>javax.mail-api</artifactId>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
         <version>1.5.2</version>
       </dependency>
 
