--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -74,7 +74,7 @@
 
     <dependency>
       <groupId>com.hubspot</groupId>
-      <artifactId>HorizonApache</artifactId>
+      <artifactId>HorizonNing</artifactId>
     </dependency>
 
   </dependencies>
