--- a/pom.xml
+++ b/pom.xml
@@ -409,6 +409,12 @@
 
       <dependency>
         <groupId>com.hubspot</groupId>
+        <artifactId>HorizonCore</artifactId>
+        <version>0.0.5</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.hubspot</groupId>
         <artifactId>HorizonNing</artifactId>
         <version>0.0.5</version>
         <exclusions>
