update deps in client

--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -74,7 +74,17 @@
 
     <dependency>
       <groupId>com.hubspot</groupId>
+      <artifactId>HorizonCore</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hubspot</groupId>
       <artifactId>HorizonNing</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
 
   </dependencies>
