--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -70,6 +70,12 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
+	  <exclusions>
+        <exclusion>
+          <artifactId>netty</artifactId>
+          <groupId>org.jboss.netty</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
