--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -36,6 +36,11 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>com.hubspot.jackson</groupId>
+      <artifactId>jackson-datatype-protobuf</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.mesos</groupId>
