--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>jackson-datatype-protobuf</artifactId>
     </dependency>
 
+	<dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-guava</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.mesos</groupId>
       <artifactId>mesos</artifactId>
