--- a/SingularityMesosClient/pom.xml
+++ b/SingularityMesosClient/pom.xml
@@ -36,6 +36,11 @@
       <groupId>org.apache.mesos</groupId>
       <artifactId>mesos</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.hubspot</groupId>
