--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <ning.async.version>1.8.12</ning.async.version>
     <snappy.version>0.3</snappy.version>
     <sentry.version>5.0</sentry.version>
+    <horizon.version>0.0.10</horizon.version>
   </properties>
 
   <modules>
@@ -403,41 +404,13 @@
       <dependency>
         <groupId>com.hubspot</groupId>
         <artifactId>HorizonCore</artifactId>
-        <version>0.0.5</version>
-        <exclusions>
-          <exclusion>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId> com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-          </exclusion>
-        </exclusions>
+        <version>${horizon.version}</version>
       </dependency>
 
       <dependency>
         <groupId>com.hubspot</groupId>
         <artifactId>HorizonNing</artifactId>
-        <version>0.0.5</version>
-        <exclusions>
-          <exclusion>
-            <groupId>com.ning</groupId>
-            <artifactId>async-http-client</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId> com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-          </exclusion>
-        </exclusions>
+        <version>${horizon.version}</version>
       </dependency>
 
       <dependency>
