--- a/SingularityExecutorCleanup/pom.xml
+++ b/SingularityExecutorCleanup/pom.xml
@@ -37,7 +37,7 @@
 
     <dependency>
       <groupId>com.hubspot</groupId>
-      <artifactId>SingularityMesosClient</artifactId>
+      <artifactId>SingularityClient</artifactId>
     </dependency>
 
     <dependency>
