--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -312,6 +312,7 @@
         <artifactId>frontend-maven-plugin</artifactId>
         <configuration>
           <workingDirectory>../SingularityUI</workingDirectory>
+          <nodeDownloadRoot>https://hubspot-boxen-public.s3.amazonaws.com/nodejs/</nodeDownloadRoot>
         </configuration>
         <executions>
           <execution>
