--- a/pom.xml
+++ b/pom.xml
@@ -397,6 +397,11 @@
             <artifactId>jline</artifactId>
             <groupId>jline</groupId>
           </exclusion>
+          <!-- Replaced by io.netty:netty; clashes with ning async-http-client -->
+          <exclusion>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
 
