Test that shows SingularityClientModule is broken under requireExplicitBindings

--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>async-http-client</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
