--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -57,6 +57,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.wordnik</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>annotations</artifactId>
     </dependency>
