--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -309,6 +309,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.wordnik</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
@@ -328,6 +333,39 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>com.github.kongchen</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <apiSources>
+            <apiSource>
+              <locations>com.hubspot.singularity.resources</locations>
+              <apiVersion>1.0</apiVersion>
+              <basePath>http://example.com</basePath>
+
+              <apiInfo>
+                <title>Singularity REST API</title>
+                <description>Singularity Mesos Framework API</description>
+              </apiInfo>
+
+              <outputTemplate>${basedir}/src/main/swagger/strapdown.html.mustache</outputTemplate>
+              <mustacheFileRoot>${basedir}/src/main/swagger/</mustacheFileRoot>
+              <outputPath>${basedir}/target/swagger/document.html</outputPath>
+              <swaggerDirectory>${basedir}/target/swagger-json</swaggerDirectory>
+              <useOutputFlatStructure>false</useOutputFlatStructure>
+            </apiSource>
+          </apiSources>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
