--- a/pom.xml
+++ b/pom.xml
@@ -470,6 +470,12 @@
       </dependency>
 
       <dependency>
+        <groupId>com.wordnik</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>1.3.10</version>
+      </dependency>
+
+      <dependency>
         <groupId>net.kencochrane.raven</groupId>
         <artifactId>raven</artifactId>
         <version>${sentry.version}</version>
