--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -29,6 +29,12 @@ Vagrant.configure("2") do |config|
     test.vm.provision "shell", path: "provision-singularity.sh"
   end
 
+  config.vm.define "test-baragon", autostart: false do |test|
+    test.vm.provision "shell", path: "provision-singularity.sh"
+
+    test.vm.provision "shell", path: "provision-baragon.sh"
+  end
+
   config.vm.define "develop", autostart: false
 
   config.vm.define "base_image", autostart: false do |build|
