clean up some abort logic

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ JavaConsole.java
 .idea
 *.pyc
 __pycache__
-local_singularity.yml
+local_singularity*yml
 qa_singularity.yml
 Docs/_build
 SingularityUI/npm-debug.log
