Switch from commons-logging to jcl-over-slf4j
Dropwizard 0.7.1 will include jcl-over-slf4j in dropwizard logging, which
clashes with jade4j and jets3t. Exclude the c-l dependency, pull in
jcl-over-slf4j at runtime.

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -90,6 +90,13 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
 
+    <!-- for jade and jets3t -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
