--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -216,6 +216,11 @@
 
     <dependency>
       <groupId>com.codahale.metrics</groupId>
+      <artifactId>metrics-annotation</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.codahale.metrics</groupId>
       <artifactId>metrics-core</artifactId>
     </dependency>
 
