--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,12 @@
 
       <dependency>
         <groupId>com.codahale.metrics</groupId>
+        <artifactId>metrics-annotation</artifactId>
+        <version>${dep.metrics.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.codahale.metrics</groupId>
         <artifactId>metrics-core</artifactId>
         <version>${dep.metrics.version}</version>
       </dependency>
