some api ref updates

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -517,6 +517,19 @@
                     <ignore></ignore>
                   </action>
                 </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>com.hubspot</groupId>
+                    <artifactId>swagger-maven-plugin</artifactId>
+                    <versionRange>[2.3.4-HUBSPOT,)</versionRange>
+                    <goals>
+                      <goal>generate</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
