--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
     end
 
     if !Vagrant.has_plugin?("vagrant-berkshelf")
-      raise "Please install vagrant-berkshelf 2.0.1 via `vagrant plugin install vagrant-berkshelf --plugin-version=2.0.1`"
+      raise "Please install vagrant-berkshelf via `vagrant plugin install vagrant-berkshelf`"
     end
   end
 
@@ -52,6 +52,7 @@ Vagrant.configure("2") do |config|
     build.vm.box = "opscode_ubuntu-14.04_provisionerless"
     build.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box"
 
+    build.berkshelf.berksfile_path = 'Berksfile'
     build.berkshelf.enabled = true
     build.omnibus.chef_version = :latest
 
