--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -237,7 +238,7 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-guava</artifactId>
@@ -327,6 +328,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.hubspot</groupId>
+      <artifactId>HorizonCore</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -365,8 +372,8 @@
               <apiVersion>${project.version}</apiVersion>
 
               <apiInfo>
-                  <title>Singularity Configuration</title>
-                  <description>Singularity Configuration</description>
+                <title>Singularity Configuration</title>
+                <description>Singularity Configuration</description>
               </apiInfo>
 
               <outputTemplate>${basedir}/../SingularityUI/app/assets/api-docs/markdown.mustache</outputTemplate>
@@ -379,8 +386,8 @@
               <apiVersion>${project.version}</apiVersion>
 
               <apiInfo>
-                  <title>Singularity REST API</title>
-                  <description>Singularity Mesos Framework API</description>
+                <title>Singularity REST API</title>
+                <description>Singularity Mesos Framework API</description>
               </apiInfo>
 
               <outputTemplate>${basedir}/../SingularityUI/app/assets/api-docs/index.html.mustache</outputTemplate>
@@ -399,33 +406,33 @@
           </execution>
         </executions>
         <dependencies>
-            <dependency>
+          <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.10</artifactId>
+            <version>1.3.10</version>
+            <exclusions>
+              <exclusion>
                 <groupId>com.wordnik</groupId>
-                <artifactId>swagger-jaxrs_2.10</artifactId>
-                <version>1.3.10</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.wordnik</groupId>
-                        <artifactId>swagger-core_2.10</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>com.wordnik</groupId>
-                <artifactId>swagger-jersey-jaxrs_2.10</artifactId>
-                <version>1.3.10</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.wordnik</groupId>
-                        <artifactId>swagger-core_2.10</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>com.hubspot</groupId>
                 <artifactId>swagger-core_2.10</artifactId>
-                <version>1.3.11-HUBSPOT-SNAPSHOT</version> <!-- TODO: finish release of HubSpot-flavored swagger -->
-            </dependency>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jersey-jaxrs_2.10</artifactId>
+            <version>1.3.10</version>
+            <exclusions>
+              <exclusion>
+                <groupId>com.wordnik</groupId>
+                <artifactId>swagger-core_2.10</artifactId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>com.hubspot</groupId>
+            <artifactId>swagger-core_2.10</artifactId>
+            <version>1.3.11-HUBSPOT-SNAPSHOT</version> <!-- TODO: finish release of HubSpot-flavored swagger -->
+          </dependency>
         </dependencies>
       </plugin>
       <plugin>
@@ -482,7 +489,7 @@
     <pluginManagement>
       <plugins>
         <!--This plugin's configuration is used to store Eclipse m2e settings 
-            only. It has no influence on the Maven build itself. -->
+          only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -539,7 +546,7 @@
   </build>
 </project>
 
-<!-- Local Variables:     -->
-<!-- mode: nxml           -->
+<!-- Local Variables: -->
+<!-- mode: nxml -->
 <!-- nxml-child-indent: 2 -->
-<!-- End:                 -->
+<!-- End: -->
