--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -113,6 +113,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.groupon.mesos</groupId>
+      <artifactId>jesos</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
