--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,13 @@
     <dep.metrics.version>3.0.2</dep.metrics.version>
     <dep.zookeeper.version>3.4.5</dep.zookeeper.version>
 
+    <dep.jesos.version>1.1</dep.jesos.version>
+
     <baragon.version>0.1.2</baragon.version>
     <curator.version>2.4.2</curator.version>
     <dropwizard.version>0.7.1</dropwizard.version>
     <jets3t.version>0.9.0</jets3t.version>
-    <mesos.version>0.20.1</mesos.version>
+    <mesos.version>0.21.0</mesos.version>
     <ning.async.version>1.8.12</ning.async.version>
     <snappy.version>0.3</snappy.version>
     <sentry.version>5.0</sentry.version>
@@ -311,6 +313,18 @@
         <groupId>org.apache.mesos</groupId>
         <artifactId>mesos</artifactId>
         <version>${mesos.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.groupon.mesos</groupId>
+        <artifactId>jesos</artifactId>
+        <version>${dep.jesos.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.logging</groupId>
+        <artifactId>jboss-logging</artifactId>
+        <version>3.1.4.GA</version>
       </dependency>
 
       <dependency>
