--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,6 @@ SingularityUI/.vee
 
 scripts/*.log
 scripts/*.gz
-scripts/logfetch.egg-info
+scripts/singularity_logfetch.egg-info
 scripts/build
 scripts/dist
