--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ jdk:
   - oraclejdk7
   - openjdk7
   - oraclejdk8
+install: mvn -Pbuild-swagger-documentation -DskipTests=true -B -fae install
+script: mvn -B -fae verify
