--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 
   <groupId>com.hubspot</groupId>
   <artifactId>Singularity</artifactId>
-  <version>0.4.1</version>
+  <version>0.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <scm>
     <connection>scm:git:git@github.com:HubSpot/Singularity.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/HubSpot/Singularity.git</developerConnection>
     <url>git@github.com:HubSpot/Singularity.git</url>
-    <tag>Singularity-0.4.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
