--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -346,12 +346,17 @@
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-test</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.kongchen</groupId>
+      <artifactId>swagger-maven-plugin</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
-        <groupId>com.hubspot</groupId>
+        <groupId>com.github.kongchen</groupId>
         <artifactId>swagger-maven-plugin</artifactId>
         <executions>
           <execution>
@@ -374,7 +379,7 @@
                   <outputTemplate>${basedir}/../SingularityUI/app/assets/api-docs/index.html.mustache</outputTemplate>
                   <mustacheFileRoot>${basedir}/../SingularityUI/app/assets/api-docs</mustacheFileRoot>
                   <outputPath>${project.build.directory}/classes/static/api-docs/index.html</outputPath>
-                  <sortApis>true</sortApis>
+                  <apiSortComparator>com.hubspot.singularity.swagger.ApiSortComparator</apiSortComparator>
                 </apiSource>
               </apiSources>
             </configuration>
@@ -513,6 +518,7 @@
                     <outputTemplate>${basedir}/../SingularityUI/app/assets/api-docs/markdown.mustache</outputTemplate>
                     <mustacheFileRoot>${basedir}/../SingularityUI/app/assets/api-docs</mustacheFileRoot>
                     <outputPath>${basedir}/../Docs/reference/api.md</outputPath>
+                    <apiSortComparator>com.hubspot.singularity.swagger.ApiSortComparator</apiSortComparator>
                   </apiSource>
                 </apiSources>
               </configuration>
