--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,12 @@
       </dependency>
 
       <dependency>
+        <groupId>com.github.kongchen</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>2.3.2</version>
+      </dependency>
+
+      <dependency>
         <groupId>net.kencochrane.raven</groupId>
         <artifactId>raven</artifactId>
         <version>${sentry.version}</version>
