Use the Mesos cookbook to install mesos instead of doing it ourselves

--- a/cookbook/.kitchen.yml
+++ b/cookbook/.kitchen.yml
@@ -22,3 +22,8 @@ suites:
     run_list:
       - recipe[singularity::default]
     attributes:
+      mesos:
+        master:
+          quorum: 1
+        slave:
+          master: http://localhost:2181/singularity
