yaml configs for runnables + validation

--- a/SingularityLogWatcher/pom.xml
+++ b/SingularityLogWatcher/pom.xml
@@ -50,6 +50,21 @@
       <groupId>org.fluentd</groupId>
       <artifactId>fluent-logger</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
 
