--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -28,7 +28,7 @@
     "jquery": "~1.11.1",
     "moment": "moment/moment#~2.7.0",
     "zeroclipboard": "~2.1.5",
-    "vex": "~2.2.1",
+    "vex": "v2.3.0-plus-beforeClose-hook",
     "messenger": "~1.4.1",
     "typeahead.js": "~0.10.4",
     "backbone.localStorage": "~1.1.9",
