small config tweaks

--- a/SingularityOOMKiller/pom.xml
+++ b/SingularityOOMKiller/pom.xml
@@ -66,6 +66,16 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
 
