--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -32,7 +32,8 @@
     "messenger": "~1.4.1",
     "typeahead.js": "~0.10.4",
     "backbone.localStorage": "~1.1.9",
-    "underscore": "~1.8.0"
+    "underscore": "~1.8.0",
+    "react": "~0.13.1"
   },
   "resolutions": {
     "backbone": "~1.1.2"
