--- a/SingularityExecutorCleanup/pom.xml
+++ b/SingularityExecutorCleanup/pom.xml
@@ -71,6 +71,11 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.spotify</groupId>
+      <artifactId>docker-client</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
