--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -33,7 +33,8 @@
     "typeahead.js": "~0.10.4",
     "backbone.localStorage": "~1.1.9",
     "underscore": "~1.6.0",
-    "react": "~0.13.1"
+    "react": "~0.13.1",
+    "backbone-react-component": "~0.8.0"
   },
   "resolutions": {
     "backbone": "~1.1.2"
