--- a/pom.xml
+++ b/pom.xml
@@ -444,7 +444,7 @@
 
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httplient</artifactId>
+        <artifactId>httpclient</artifactId>
         <version>4.4</version>
         <exclusions>
           <exclusion>
