--- a/pom.xml
+++ b/pom.xml
@@ -651,6 +651,12 @@
           </exclusion>
         </exclusions>
       </dependency>
+
+      <dependency>
+        <groupId>org.apache.directory.api</groupId>
+        <artifactId>api-all</artifactId>
+        <version>1.0.0-M28</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
