--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 zk:
   image: bobrik/zookeeper
-  ports:
-   - 2181:2181
+  net: host
   environment:
     ZK_CONFIG: tickTime=2000,initLimit=10,syncLimit=5,maxClientCnxns=128,forceSync=no,clientPort=2181
     ZK_ID: 1
@@ -10,7 +9,7 @@ master:
   image: mesosphere/mesos-master:0.21.1-1.1.ubuntu1404
   net: host
   environment:
-    MESOS_ZK: zk://127.0.0.1:2181
+    MESOS_ZK: zk://localhost:2181/mesos
     MESOS_HOSTNAME: 192.168.59.103
     MESOS_IP: 192.168.59.103
     MESOS_QUORUM: 1
@@ -21,9 +20,8 @@ slave:
   image: mesosphere/mesos-slave:0.21.1-1.1.ubuntu1404
   entrypoint: mesos-slave
   net: host
-  pid: host
   environment:
-    MESOS_MASTER: zk://127.0.0.1:2181
+    MESOS_MASTER: zk://localhost:2181/mesos
     MESOS_HOSTNAME: 192.168.59.103
     MESOS_IP: 192.168.59.103
     MESOS_CONTAINERIZERS: docker,mesos
@@ -33,9 +31,9 @@ slave:
     - /var/run/docker.sock:/var/run/docker.sock
 
 singularity:
-  image: ssalinas/singularity:0.4.1
+  image: ssalinas/singularity:0.4.2
   net: host
   environment:
-    SINGULARITY_MASTER: zk://127.0.0.1:2181
-    SINGULARITY_ZK: zk://127.0.0.1:2181
+    SINGULARITY_MASTER: zk://localhost:2181/mesos
+    SINGULARITY_ZK: localhost:2181
     SINGULARITY_HOSTNAME: 192.168.59.103
