add maintainer,docker-compose with baragon

--- a/docker/singularity/singularity.yaml
+++ b/docker/singularity/singularity.yaml
@@ -34,6 +34,6 @@ ui:
   title: Singularity (dev)
   baseUrl: http://vagrant-singularity:7099/singularity
 
-#loadBalancerUri: http://vagrant-singularity:8080/baragon/v2/request
+loadBalancerUri: http://localhost:8080/baragon/v2/request
 
 enableCorsFilter: true
