--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,15 @@ singularity:
     SINGULARITY_MASTER: zk://localhost:2181/mesos
     SINGULARITY_ZK: localhost:2181
     SINGULARITY_HOSTNAME: 192.168.59.103
+
+baragonservice:
+  image: hubspot/baragonservice:0.1.7
+  net: host
+  environment:
+    BARAGON_TYPE: service
+
+baragonagent:
+  image: hubspot/baragonagent:0.1.7
+  net: host
+  environment:
+    BARAGON_TYPE: agent
